--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -13,6 +13,18 @@
   <a href="Contacts.html">My Contacts</a>
   <a href="Gallery.html">My Gallery</a>
   <a href="WorkExperience.html">Work experience</a>
+  <a href="responsive-flex.html">responsive-flex</a>
+  <a href="parallax.html">parallax</a>
+  <div id="flex-container">
+  <span class="box1" style="background-color:#7FFFD4;">
+    <h6 align="center">#1</h6><h2 style="">I'am Tolmachov Vadim </h2>
+    <h4 style="">I love studing</h4></span>
+  <span class="box2" style="background-color:#1E90FF;">
+    <h6 align="center">#2</h6></span>
+  <span class="box3" style="background-color:#FFD700;">
+    <h6 align="center">#3</h6></span>
+  </div>
+
   <h1>
   My work experience
     <hr size="3" color="black">
