--- a/Моё_Величиство.html
+++ b/Моё_Величиство.html
@@ -7,7 +7,7 @@
     </title>
   <link rel="stylesheet" href="stylefile.css">
 </head>
-<body>
+<body style="margin:0;">
   <style>
     hr {
       border: none;
@@ -24,10 +24,13 @@
   <a href="Gallery.html">My Gallery</a>
   <a href="Skills.html">My Skills</a>
   <a href="WorkExperience.html">Work experience</a>
-  <h1>
+  <a href="responsive-flex.html">responsive-flex</a>
+  <a href="parallax.html">parallax</a>
+  <h1 align="center">
     Інформація про мене
     <hr>
   </h1>
+
   <table WIDTH=100%>
 
     <tr align='center'>
@@ -46,29 +49,40 @@
       </td>
     </tr>
 
-    <tr align ='center'>
+    <tr>
       <td colspan="2">
+        <div id="flex-container">
+        <span class="box10">
         <h2 text-align='center'>
-          Вчився я як більщість, нічого особливого в області шкільних занять не здобув,
+          Вчився я як більшість, нічого особливого в області шкільних занять не здобув,
           але дуже любив математику тому й пішов на фізико-математичний.
           Найвизначніші мої здобутки були у плаванні</h2>
+        </span>
+        </div>
       </td>
     </tr>
 
     <tr>
       <td align='center'>
+        <div id="flex-container">
+        <span class="box10">
         <h3>Я займався плаванням з 7 років, 3 роки у звичайній<br>
           группі та ще 6 у старшій,<br>
           і в решті решт зайняв третє
           місце<br> на всеукраїнських змаганнях</h3>
+        </span>
+        </div>
       </td>
-
       <td align='center'>
-        <h3>Я вчився грати на гітарі з 12<br>
+        <div id="flex-container">
+        <span class="box10">
+        <h3>Я вчився грати на гітарі з 12 <br>
           років і мав непогані навички але через підготовку до ЗНО<br>
           мав покинути та приділити більше уваги навчанню, зараз<br>
           я навчаюсь цьому сам.
         </h3>
+      </span>
+      </div>
       </td>
     </tr>
 
