--- a/Contacts.html
+++ b/Contacts.html
@@ -4,22 +4,29 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-    <link rel="stylesheet" href="stylefile.css">
+    <link rel="stylesheet" href="stylefile1.css">
 </head>
-<body>
+<body style="margin: 0">
+<div id="flex-container3">
+  <span style="text-align: right" class="boxa">
   <a href="Моё_Величиство.html">Головна</a>
   <a href="Gallery.html">My Gallery</a>
   <a href="WorkExperience.html">Work experience</a>
-  <form action="mailto:tolmachov.vadim@gmail.com" method="POST" enctype="text/plain">
-        <!-- За допомогою HTML-елемента створив форму -->
+  <a href="responsive-flex.html">responsive-flex</a>
+  <a href="parallax.html">parallax</a>
+  <hr>
+  <form action="mailto:tolmachov.vadim@gmail.com" method="POST" enctype="text/plain" style="margin-top:10px;">
         <label for="">Your name:</label>
         <input type="text" name="My name is"><br>
         <label for="">Your email:</label>
         <input type="email" name="My email is"><br>
         <label for="">Your message:</label><br>
-        <textarea name="My message:" id="textarea1" cols="30" rows="10"></textarea>
+        <textarea name="My message:" id="textarea1" cols="30" rows="10"></textarea><br>
         <input type="submit">
-    </form>
+  </form>
+</div>
+  <div id="flex-container3">
+  <span>
   <h2 style="background:#F5DEB3;">
     Мій номер телефону:
   </h2>
@@ -36,12 +43,14 @@
   <h2 style="background:#F5DEB3">
     Мій Discord та Вайбер
   </h2>
-  <h3 style="font-size:21px;margin-top:-20px">
+  <h3 style="font-size:21px; margin-top:-20px;">
     Тень#8560<br>
     +380992722754 - Вадим Толмачов
   </h3>
+</span>
+  </div>
   <img src="фоточки\1.jpg"
   alt="" style="margin-top: -15px; width: 40%; height: 50%;
-  border:4px solid;">
+  border:2px solid; margin-left:8px">
 </body>
 </html>
