--- a/Skills.html
+++ b/Skills.html
@@ -9,14 +9,17 @@
 </head>
 
 <body>
+  <style>
+  </style>
   <a href="Моё_Величиство.html">Головна</a>
   <a href="Contacts.html">My Contacts</a>
   <a href="Gallery.html">My Gallery</a>
   <a href="WorkExperience.html" style="text-decoration:none; margin-left:20px">Work experience</a>
+  <a href="responsive-flex.html">responsive-flex</a>
+  <a href="parallax.html">parallax</a>
   <h1>
     Skills
     <hr size="3" color="black">
-  </h1>
   <h2 align="center">
     Я вчив багато мов програмування, деякі з них я ще пам'ятаю і більш-менш знаю, деякі ще вчу,
     на цій сторінці представлені мої навички у мовах програмування та допоміжних програмах
@@ -43,6 +46,36 @@
       </td>
     </tr>
   </table>
+
+  <div id="flex-container">
+  <span class="box4">
+    <hr id="hr1">
+    <p id="hAll">A</p>
+  </span>
+  <span class="box5">
+    <hr id="hr1">
+    <p id="hAll">B</p>
+  </span>
+  <span class="box6">
+    <hr id="hr1">
+    <p id="hAll">C</p>
+  </span>
+  <span class="box7">
+    <hr id="hr1">
+    <p id="hAll">D</p>
+  </span>
+  <span class="box8">
+    <hr id="hr1">
+    <p id="hAll">E</p>
+  </span>
+  </div>
+  <div id="flex-container2">
+  <span class="box9">
+    <hr id="hr1">
+    <p id="hAll">F</p>
+  </span>
+</div>
+
 </body>
 
 </html>
