--- a/Contacts.html
+++ b/Contacts.html
@@ -27,9 +27,9 @@
 </div>
   <div id="flex-container3">
   <span>
-  <h2 style="background:#F5DEB3;">
+  <p id="pId">
     Мій номер телефону:
-  </h2>
+  </p>
   <h3 style="font-size:21px;margin-top:-20px">
     +380992722754
   </h3>
