--- a/Skills.html
+++ b/Skills.html
@@ -24,24 +24,24 @@
     Я вчив багато мов програмування, деякі з них я ще пам'ятаю і більш-менш знаю, деякі ще вчу,
     на цій сторінці представлені мої навички у мовах програмування та допоміжних програмах
   </h2>
-  <table>
-    <tr>
+  <table >
+    <tr class="tableclass">
       <td>
         <ul>
-          <h3 text-align="left">HTML-5⭐⭐⭐</h3>
-          <h3 text-align="left">Java⭐⭐⭐⭐</h3>
-          <h3 text-align="left">Python⭐</h3>
-          <h3 text-align="left">CSS⭐⭐</h3>
-          <h3 text-align="left">Unity</h3>
+          <h3>HTML-5⭐⭐⭐</h3>
+          <h3>Java⭐⭐⭐⭐</h3>
+          <h3>Python⭐</h3>
+          <h3>CSS⭐⭐</h3>
+          <h3>Unity</h3>
         </ul>
       </td>
       <td>
         <ul>
-          <h3 align="left">Javascript⭐⭐⭐</h3>
-          <h3 text-align="left">C++⭐⭐⭐</h3>
-          <h3 text-align="left">Photoshop⭐</h3>
-          <h3 text-align="left">Design⭐⭐</h3>
-          <h3 text-align="left">Music making⭐</h3>
+          <h3>Javascript⭐⭐⭐</h3>
+          <h3>C++⭐⭐⭐</h3>
+          <h3>Photoshop⭐</h3>
+          <h3>Design⭐⭐</h3>
+          <h3>Music making⭐</h3>
         </ul>
       </td>
     </tr>
