--- a/Contacts.html
+++ b/Contacts.html
@@ -14,6 +14,7 @@
   <a href="WorkExperience.html">Work experience</a>
   <a href="responsive-flex.html">responsive-flex</a>
   <a href="parallax.html">parallax</a>
+    <a href="GamesSite.html">GamesSite</a>
   <hr>
   <form action="mailto:tolmachov.vadim@gmail.com" method="POST" enctype="text/plain" style="margin-top:10px;">
         <label for="">Your name:</label>
