--- a/Gallery.html
+++ b/Gallery.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="stylefile3.css">
+
 </head>
 
 <body style="margin:2">
@@ -13,6 +14,7 @@
   <a href="WorkExperience.html" style="text-decoration:none; margin-left:20px">Work experience</a>
   <a href="responsive-flex.html">responsive-flex</a>
   <a href="parallax.html">parallax</a>
+    <a href="GamesSite.html">GamesSite</a>
   <h1 style="color: #134D;background-color:#1211; text-align:center">
     Моя галерея
     <hr>
