--- a/Skills.html
+++ b/Skills.html
@@ -17,6 +17,7 @@
   <a href="WorkExperience.html" style="text-decoration:none; margin-left:20px">Work experience</a>
   <a href="responsive-flex.html">responsive-flex</a>
   <a href="parallax.html">parallax</a>
+  <a href="GamesSite.html">GamesSite</a>
   <h1>
     Skills
     <hr size="3" color="black">
