--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -15,6 +15,7 @@
   <a href="WorkExperience.html">Work experience</a>
   <a href="responsive-flex.html">responsive-flex</a>
   <a href="parallax.html">parallax</a>
+  <a href="GamesSite.html">GamesSite</a>
   <div id="flex-container">
   <span class="box1" style="background-color:#7FFFD4;">
     <h6 align="center">#1</h6><h2 style="">I'am Tolmachov Vadim </h2>
