--- a/parallax.html
+++ b/parallax.html
@@ -10,6 +10,7 @@
   <a href="WorkExperience.html" style="text-decoration:none; margin-left:20px">Work experience</a>
   <a href="responsive-flex.html" style="text-decoration:none; margin-left:20px">responsive-flex</a>
   <a href="Gallery.html" style="text-decoration:none; margin-left:20px">My Gallery</a>
+  <a href="GamesSite.html">GamesSite</a>
 <p>Прокручування паралакса – це тренд веб-сайту, в якому фоновий вміст
 (тобто зображення) переміщується з різною швидкістю, ніж вміст переднього плану
 під час прокручування.</p>
