--- a/responsive-flex.html
+++ b/responsive-flex.html
@@ -17,6 +17,7 @@
     <a href="Gallery.html">My Gallery</a>
     <a href="WorkExperience.html">Work experience</a>
     <a href="parallax.html">parallax</a>
+      <a href="GamesSite.html">GamesSite</a>
     <hr>
       <h1 style="">Чудові місця світу, які варто відвідати</h1>
   </nav>
